docker_compose fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,10 @@ services:
       - ./.env
   web:
     image: lydiaeire/yamdb
-    build: .
     restart: always
+    command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - "8000:8000"
     volumes:
 
       - static_value:/code/static/
