--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 
-version: '3.8'
+version: '3.3'
 
 services:
   db:
@@ -9,7 +9,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: .
+    image: lydiaeire/yamdb
     restart: always
     volumes:
 
