--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,8 @@ services:
     env_file:
       - ./.env
   web:
-    image: lydiaeire/yamdb
+    build: .
     restart: always
-    command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - "8000:8000"
     volumes:
 
       - static_value:/code/static/
