docker compose fixed

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 
-version: '3.3'
+version: '3.8'
 
 services:
   db:
@@ -9,6 +9,7 @@ services:
     env_file:
       - ./.env
   web:
+    image: lydiaeire/yamdb:latest
     build: .
     restart: always
     volumes:
