--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: lydiaeire/yamdb:latest
+    image: lydiaeire/yamdb
     build: .
     restart: always
     volumes:
