--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -55,18 +55,23 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         stack_file_name: docker-compose.yaml
-        script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
-          sudo docker-compose stop
-          sudo docker-compose rm web
-          touch .env
-          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker-compose up -d
+        script:
+           apt update && apt install sudo
+           sudo docker pull lydiaeire/yamdb
+           sudo docker stop $(sudo docker ps -a -q)
+           sudo docker run --rm -d -p 5000:5000 lydiaeire/yambd
+#          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
+#          sudo docker-compose stop
+#          sudo docker-compose rm web
+
+#          touch .env
+#          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+#          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+#          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+#          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+#          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+#          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+#          sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
