--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -56,10 +56,10 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         stack_file_name: docker-compose.yaml
         script:
-          sudo docker pull lydiaeire/yamdb
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
           sudo docker-compose stop
           sudo docker-compose rm web
-          sudo touch .env
+          touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
           echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
