--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -55,10 +55,10 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           stack_file_name: docker-compose.yaml
           script: |
-            docker pull lydiaeire/yamdb
-            docker-compose stop
-            docker-compose rm web
-            touch .env
+            sudo docker pull lydiaeire/yamdb
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            sudo touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
