--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Test by pytest
       run: pytest
     - name: Test by flake8
-      run: flake8 title_api/ api_yamdb/ --exclude title_api/migrations/,api_yamdb/settings.py
+      run: flake8 title_api/ api_yamdb/ --exclude title_api/migrations/,api_yamdb/settings.py,yambd_final-master/tests/
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
