--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -43,7 +43,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
+          context: ./backend/
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
